[package]
name = "winapi_mouse"
version = "0.1.0"
authors = ["jeka <yaroshjeka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel32-sys = "0.2.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","psapi","processthreadsapi","handleapi","winbase","accctrl","aclapi"] }